5d/2cfcd8908ac79f258b81c16674e305d9e8ebad
BUILD: openscad-2019.05-3850-g5d2cfcd89
system: rolling
date: Wed Feb 11 08:30:52 AM CET 2026
tasks: configure build[failed]
FAILED:
      |              ^~~~~~~~
In file included from /usr/include/X11/Xlib.h:44:
/usr/include/qt6/QtGui/qcursor.h:48:17: error: expected unqualified-id before numeric constant
   48 |     QCursor(Qt::CursorShape shape);
      |                 ^~~~~~~~~~~
/usr/include/qt6/QtGui/qcursor.h:48:15: error: expected ‘)’ before numeric constant
   48 |     QCursor(Qt::CursorShape shape);
      |            ~  ^
      |               )
/usr/include/qt6/QtGui/qcursor.h:59:14: error: expected type-specifier before ‘QVariant’
   59 |     operator QVariant() const;
      |              ^~~~~~~~
/usr/include/qt6/QtGui/qcursor.h:61:9: error: expected unqualified-id before numeric constant
   61 |     Qt::CursorShape shape() const;
      |         ^~~~~~~~~~~
/usr/include/qt6/QtGui/qcursor.h:62:23: error: expected identifier before numeric constant
   62 |     void setShape(Qt::CursorShape newShape);
      |                       ^~~~~~~~~~~
/usr/include/qt6/QtGui/qcursor.h:62:23: error: expected ‘,’ or ‘...’ before numeric constant
/usr/include/qt6/QtWidgets/qwidget.h:715:13: error: ‘QVariant’ does not name a type
  715 |     virtual QVariant inputMethodQuery(Qt::InputMethodQuery) const;
      |             ^~~~~~~~
make[2]: *** [CMakeFiles/OpenSCADLibInternal.dir/build.make:3654: CMakeFiles/OpenSCADLibInternal.dir/src/gui/input/SpaceNavInputDriver.cc.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:337: CMakeFiles/OpenSCADLibInternal.dir/all] Error 2
make: *** [Makefile:166: all] Error 2
